Fix: Adjust fishing emoji size and spacing to prevent clipping

--- a/index.html
+++ b/index.html
@@ -2132,7 +2132,7 @@
                     btn.setAttribute('data-type', 'fishing');
                     btn.style.zIndex = '10';
 
-                    btn.innerHTML = `<div class="control-content"><div class="animal-emoji" style="font-size: 6rem !important; line-height: 1; display: inline-block;">${item.emoji}</div></div>`;
+                    btn.innerHTML = `<div class="control-content"><div class="animal-emoji" style="font-size: 5.5rem !important; line-height: 1.3; display: inline-block; padding-bottom: 10px;">${item.emoji}</div></div>`;
 
                     const handler = async (e) => {
                         e.preventDefault();
