--- a/index.html
+++ b/index.html
@@ -877,13 +877,12 @@
 
         .controls-grid .control-btn .animal-emoji,
         .controls-grid .fish-item .animal-emoji {
-            font-size: 8rem !important;
-            line-height: 1;
+            font-size: 4rem !important;
+            line-height: 1.4;
             display: inline-block !important;
             visibility: visible !important;
             opacity: 1 !important;
-            transform: scale(1.5);
-            /* Extra boost */
+            /* Removed scale transform to prevent clipping */
         }
 
         #level-complete-container {
